--- a/scracth.html
+++ b/scracth.html
@@ -191,13 +191,13 @@
              <tr>
                  <td>KAUANY</td>
                     <td>6ºB</td>
-                    <td><a href="">HISTÓRIA da Kauany</a></td>   
+                    <td><a href="">Sem Machismo</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>LUIZ VINICIUS</td>
                     <td>6ºA</td>
-                    <td><a href="">HISTÓRIA do Luiz</a></td>
+                    <td><a href="">O amor</a></td>
              </tr>
              <tr>
                  <td>MANUELA</td>
@@ -252,7 +252,7 @@
                     <th></th>                 
                     <td>MURILO</td>
                     <td>6ºC</td>
-                    <td><a href="">HISTÓRIA do Murilo</a></td>
+                    <td><a href="">Emocionante história</a></td>
           </tr>
             </thead>
  
