--- a/scracth.html
+++ b/scracth.html
@@ -219,7 +219,7 @@
                     <th></th>                 
                     <td>LAURA BIANCA</td>
                     <td>6ºB</td>
-                    <td><a href="">HISTÓRIA da Laura</a></td>
+                    <td><a href="">Fala de mãe</a></td>
             </tr>
             <tr>
                     <td>KAMILLY</td>
