--- a/scracth.html
+++ b/scracth.html
@@ -235,7 +235,7 @@
                 <tr>
                     <td>LUIS GUSTAVO</td>
                     <td>6ºC</td>
-                    <td><a href="">Arrumando o quarto</a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/841469135/fullscreen/" target="_blank">Arrumando o quarto</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
