--- a/scracth.html
+++ b/scracth.html
@@ -191,7 +191,7 @@
              <tr>
                  <td>KAUANY</td>
                     <td>6ºB</td>
-                    <td><a href="">Sem Machismo</a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/852550197/fullscreen/" target="_blank">Sem Machismo</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
