--- a/python.html
+++ b/python.html
@@ -198,9 +198,9 @@
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> CARLOS</td>
+                    <td> GABRIEL</td>
                     <td>8ºA</td>
-                    <td><a href="">QUIZ do Carlos </a></td>
+                    <td><a href="">QUIZ do Gabriel </a></td>
              </tr>
              <tr>
                     <td>ANA JULIA </td>
@@ -213,17 +213,7 @@
                     <td>8ºC</td>
                     <td><a href="">QUIZ do Kauê </a></td>
             </tr>
-            <tr>
-                    <td>ANA JULIA </td>
-                    <td>8ºB</td>
-                    <td><a href="">QUIZ da Ana Julia</a></td>   
-                    <th></th> 
-                    <th></th> 
-                    <th></th>                 
-                    <td> </td>
-                    <td></td>
-                    <td><a href=""></a></td>
-          </tr>
+          
      
             </thead>
  
