--- a/python5.html
+++ b/python5.html
@@ -144,7 +144,92 @@
                     <td>9ºC</td>
                     <td><a href="">QUIZ do Leonardo </a></td>
                 </tr>
-     
+                <tr>
+                     <td>MURILLO</td>
+                    <td>6ºB</td>
+                    <td><a href="">QUIZ do Murillo</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>LUCCA</td>
+                    <td>6ºA</td>
+                    <td><a href="">QUIZ do Lucca </a></td>
+                </tr>
+                 <tr>
+                     <td>KAUÃ</td>
+                    <td>6ºC</td>
+                    <td><a href="">QUIZ do Kauã</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>KESIA</td>
+                    <td>6ºA</td>
+                    <td><a href="">QUIZ da Kesia </a></td>
+                </tr>
+                <tr>
+                     <td>RUAN</td>
+                    <td>6ºA</td>
+                    <td><a href="">QUIZ do Ruan</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>ROBSON </td>
+                    <td>6ºA</td>
+                    <td><a href="">QUIZ do Robson </a></td>
+                </tr>
+                <tr>
+                     <td>MIKAELA</td>
+                    <td>6ºA</td>
+                    <td><a href="">QUIZ da Mikaela</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>MAYSA </td>
+                    <td>6ºB</td>
+                    <td><a href="">QUIZ da Maysa </a></td>
+                </tr>
+                 <tr>
+                     <td>ANA BEATRIZ</td>
+                    <td>6ºA</td>
+                    <td><a href="">QUIZ da Ana</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>ISABELLA</td>
+                    <td>6ºC</td>
+                    <td><a href="">QUIZ da Isabella </a></td>
+                </tr>
+                 <tr>
+                    <td>LETICIA</td>
+                    <td>6ºC</td>
+                    <td><a href="">QUIZ da Leticia</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>PAULO</td>
+                    <td>6ºB</td>
+                    <td><a href="">QUIZ do Paulo </a></td>
+                </tr>
+                <tr>
+                    <td>WENDER</td>
+                    <td>6ºB</td>
+                    <td><a href="">QUIZ do Wender</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>VICTOR HUGO</td>
+                    <td>6ºC</td>
+                    <td><a href="">QUIZ do Victor </a></td>
+                </tr>
+                    <td>ANA JULIA</td>
+                    <td>6ºC</td>
+                    <td><a href="">QUIZ da Ana</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td></td>
+                    <td>6ºC</td>
+                    <td><a href=""></a></td>
             </thead>
  
         </table>
