--- a/python5.html
+++ b/python5.html
@@ -145,91 +145,72 @@
                     <td><a href="">QUIZ do Leonardo </a></td>
                 </tr>
                 <tr>
-                     <td>MURILLO</td>
-                    <td>6ºB</td>
-                    <td><a href="">QUIZ do Murillo</a></td>   
+                     <td>LUCAS</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do Lucas</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>LUCCA</td>
-                    <td>6ºA</td>
-                    <td><a href="">QUIZ do Lucca </a></td>
+                    <td>SOPHIA</td>
+                    <td>8ºA</td>
+                    <td><a href="">QUIZ da Sophia </a></td>
                 </tr>
                  <tr>
-                     <td>KAUÃ</td>
-                    <td>6ºC</td>
-                    <td><a href="">QUIZ do Kauã</a></td>   
+                    <td>BRENO</td>
+                    <td>8ºA</td>
+                    <td><a href="">QUIZ do Breno </a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>KESIA</td>
-                    <td>6ºA</td>
-                    <td><a href="">QUIZ da Kesia </a></td>
+                    <td>GABRIELLY</td>
+                    <td>8ºB</td>
+                    <td><a href="">QUIZ da Gabrielly </a></td>
                 </tr>
                 <tr>
-                     <td>RUAN</td>
-                    <td>6ºA</td>
-                    <td><a href="">QUIZ do Ruan</a></td>   
+                     <td>YARITSA </td>
+                    <td>8ºA</td>
+                    <td><a href="">QUIZ da Yaritsa</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>ROBSON </td>
-                    <td>6ºA</td>
-                    <td><a href="">QUIZ do Robson </a></td>
+                    <td>LARA</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ da Lara </a></td>
                 </tr>
                 <tr>
-                     <td>MIKAELA</td>
-                    <td>6ºA</td>
-                    <td><a href="">QUIZ da Mikaela</a></td>   
+                     <td>MIRELLA</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ da Mirella</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>MAYSA </td>
-                    <td>6ºB</td>
-                    <td><a href="">QUIZ da Maysa </a></td>
+                    <td>CARLOS</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do Carlos </a></td>
                 </tr>
                  <tr>
-                     <td>ANA BEATRIZ</td>
-                    <td>6ºA</td>
-                    <td><a href="">QUIZ da Ana</a></td>   
+                     <td>ELEN</td>
+                    <td>8ºB</td>
+                    <td><a href="">QUIZ da Elen</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>ISABELLA</td>
-                    <td>6ºC</td>
-                    <td><a href="">QUIZ da Isabella </a></td>
+                    <td>THIAGO </td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do Thiago </a></td>
                 </tr>
                  <tr>
-                    <td>LETICIA</td>
-                    <td>6ºC</td>
-                    <td><a href="">QUIZ da Leticia</a></td>   
+                    <td>THAMYRES</td>
+                    <td>8ºB</td>
+                    <td><a href="">QUIZ da Thamyres</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>PAULO</td>
-                    <td>6ºB</td>
-                    <td><a href="">QUIZ do Paulo </a></td>
+                    <td>FÁTIMA</td>
+                    <td>8ºB</td>
+                    <td><a href="">QUIZ da Fátima </a></td>
                 </tr>
-                <tr>
-                    <td>WENDER</td>
-                    <td>6ºB</td>
-                    <td><a href="">QUIZ do Wender</a></td>   
-                    <th></th> 
-                    <th></th> 
-                    <th></th>                 
-                    <td>VICTOR HUGO</td>
-                    <td>6ºC</td>
-                    <td><a href="">QUIZ do Victor </a></td>
-                </tr>
-                    <td>ANA JULIA</td>
-                    <td>6ºC</td>
-                    <td><a href="">QUIZ da Ana</a></td>   
-                    <th></th> 
-                    <th></th> 
-                    <th></th>                 
-                    <td></td>
-                    <td>6ºC</td>
-                    <td><a href=""></a></td>
+                
             </thead>
  
         </table>
