--- a/scracth.html
+++ b/scracth.html
@@ -253,6 +253,94 @@
                     <td>MURILO</td>
                     <td>6ºC</td>
                     <td><a href="">Emocionante história</a></td>
+             </tr>
+                 <tr>
+                    <td>RAFAELA</td>
+                    <td>7ºA</td>
+                    <td><a href="">HISTÓRIA da Rafela</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>PABLO</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA do Pablo</a></td>
+          </tr>
+              <tr>
+                    <td>KEVEN</td>
+                    <td>7ºA</td>
+                    <td><a href="">HISTÓRIA do Keven</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>ANDRÉ</td>
+                    <td>7ºA</td>
+                    <td><a href="">HISTÓRIA do André</a></td>
+          </tr>
+                  <tr>
+                    <td>JOÃO</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA do João</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>STHEFANY</td>
+                    <td>7ºB</td>
+                    <td><a href="">HISTÓRIA da Sthefany</a></td>
+          </tr>
+                 <tr>
+                    <td>IZABELY</td>
+                    <td>7ºB</td>
+                    <td><a href="">HISTÓRIA da Izabely</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>PAULO</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA do Paulo</a></td>
+          </tr>
+                 <tr>
+                    <td>ANA PAULA </td>
+                    <td>7ºA</td>
+                    <td><a href="">HISTÓRIA da Ana</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>KETHLEN</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA da Kethlen</a></td>
+          </tr>
+                 <tr>
+                    <td>MARIA </td>
+                    <td>7ºB</td>
+                    <td><a href="">HISTÓRIA da Maria</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>THAILA</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA da Thaila</a></td>
+          </tr>
+                  <tr>
+                    <td>Nathan </td>
+                    <td>7ºA</td>
+                    <td><a href="">HISTÓRIA do Nathan</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>MIGUEL</td>
+                    <td>7ºB</td>
+                    <td><a href="">HISTÓRIA do Miguel</a></td>
+          </tr>
+                  <tr>
+                    <td>Cecília</td>
+                    <td>7ºA</td>
+                    <td><a href="">HISTÓRIA do Lucas</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>RAISSA</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA da Raissa</a></td>
           </tr>
             </thead>
  
