--- a/python5.html
+++ b/python5.html
@@ -67,7 +67,7 @@
             <img src="fotos/9_2.jpg" alt="9º" style="width: 95%">
         </div>
         <div class="coluna">
-            <img src="fotos/6º1.jpg" alt="6º" style="width: 95%;">
+            <img src="fotos/8ºsexta.jpg" alt="6º" style="width: 95%;">
         </div>
          <div class="coluna">
             <img src="9º_quarta.jpg" alt="9º" style="width: 95%;">
