--- a/python5.html
+++ b/python5.html
@@ -206,9 +206,9 @@
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>FÁTIMA</td>
+                    <td>FATIMA</td>
                     <td>8ºB</td>
-                    <td><a href="">QUIZ da Fátima </a></td>
+                    <td><a href="">QUIZ da Fatima </a></td>
                 </tr>
                 
             </thead>
