--- a/python5.html
+++ b/python5.html
@@ -208,7 +208,7 @@
                     <th></th>                 
                     <td>FATIMA</td>
                     <td>8ºB</td>
-                    <td><a href="">QUIZ da Fatima </a></td>
+                    <td><a href="">Todos devem ser respeitados </a></td>
                 </tr>
                 
             </thead>
