--- a/scracth.html
+++ b/scracth.html
@@ -70,7 +70,7 @@
    
     <div class="row">
         <div class="coluna">
-            <img src="fotos/6º.jpg" alt="6º" style="width: 95%";>
+            <img src="fotos/7ºsexta.jpg" alt="7º" style="width: 95%";>
         </div>
         <div class="coluna">
             <img src="fotos/7º.jpg" alt="7º" style="width: 95%";>
