--- a/scracth.html
+++ b/scracth.html
@@ -334,7 +334,7 @@
                   <tr>
                     <td>Cecília</td>
                     <td>7ºA</td>
-                    <td><a href="">HISTÓRIA do Lucas</a></td>   
+                    <td><a href="">HISTÓRIA do Luccas</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
