--- a/python5.html
+++ b/python5.html
@@ -147,7 +147,7 @@
                 <tr>
                      <td>LUCAS</td>
                     <td>8ºC</td>
-                    <td><a href="">QUIZ do Lucas</a></td>   
+                    <td><a href="https://trinket.io/python3/af1a6b1a08">Entenda mais sobre a igualdade de gênero!!!</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
