--- a/scracth.html
+++ b/scracth.html
@@ -257,13 +257,13 @@
                  <tr>
                     <td>RAFAELA</td>
                     <td>7ºA</td>
-                    <td><a href="">HISTÓRIA da Rafela</a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/860536014/fullscreen/" target="_blank">Trabalho injusto</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>PABLO</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA do Pablo</a></td>
+                    <td><a href="https://scratch.mit.edu/projects/842973611/fullscreen/" target="_blank" >Jogadora de Basquete</a></td>
           </tr>
               <tr>
                     <td>KEVEN</td>
@@ -307,7 +307,7 @@
                     <th></th>                 
                     <td>KETHLEN</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA da Kethlen</a></td>
+                    <td><a href="https://scratch.mit.edu/projects/860534326/fullscreen/" target="_blank">Para ouvir</a></td>
           </tr>
                  <tr>
                     <td>MARIA </td>
@@ -318,7 +318,7 @@
                     <th></th>                 
                     <td>THAILA</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA da Thaila</a></td>
+                    <td><a href="https://scratch.mit.edu/projects/860534326/fullscreen/" target="_blank">Cuidado com o que você fala</a></td>
           </tr>
                   <tr>
                     <td>Nathan </td>
@@ -334,7 +334,7 @@
                   <tr>
                     <td>Cecília</td>
                     <td>7ºA</td>
-                    <td><a href="">HISTÓRIA do Luccas</a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/860535230/fullscreen/" target="_blank">Batendo papo com Luccas</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
