--- a/python.html
+++ b/python.html
@@ -106,13 +106,13 @@
                 <tr>
                     <td>JUAN</td>
                     <td>9ºC</td>
-                    <td><a href="">QUIZ do Juan</a></td>   
+                    <td><a href="https://www.estrategiaods.org.br/o-que-sao-os-ods/" target="_blank">O que são ODS?</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>ANDRÉ</td>
                     <td>9ºC</td>
-                    <td><a href="">QUIZ do André </a></td>
+                    <td><a href="https://www.ufmg.br/espacodoconhecimento/saude-e-bem-estar/" target="_blank">Vamos ler?</a></td>
                 </tr>
                 <tr>
                     <td>JOSÉ</td>
@@ -156,7 +156,7 @@
                     <th></th>                 
                     <td> VITÓRIA</td>
                     <td>8ºA</td>
-                    <td><a href="">QUIZ da Vitória </a></td>
+                    <td><a href="https://youtu.be/GoFtn-JDd2I" target="_blank">Entendendo a ODS3 </a></td>
                 </tr>
                 <tr>
                  <td>LUIZ AUGUSTO</td>
