--- a/python5.html
+++ b/python5.html
@@ -114,7 +114,7 @@
                 <tr>
                      <td>EDUARDO</td>
                     <td>9ºB</td>
-                    <td><a href="">QUIZ do Eduardo</a></td>   
+                    <td><a href="https://trinket.io/python3/283cf3ad0d" target="_blank">QUIZ do Eduardo - 5 perguntas</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
