--- a/python5.html
+++ b/python5.html
@@ -142,7 +142,7 @@
                     <th></th>                 
                     <td>LEONARDO</td>
                     <td>9ºC</td>
-                    <td><a href="">QUIZ do Leonardo </a></td>
+                    <td><a href="https://www.youtube.com/watch?v=GHk9QBeb5CM" target="_blank">Direitos das Mulheres</a></td>
                 </tr>
                 <tr>
                      <td>LUCAS</td>
