--- a/python.html
+++ b/python.html
@@ -112,7 +112,7 @@
                     <th></th>                 
                     <td>ANDRÉ</td>
                     <td>9ºC</td>
-                    <td><a href="https://www.ufmg.br/espacodoconhecimento/saude-e-bem-estar/" target="_blank">Vamos ler?</a></td>
+                    <td><a href="https://multiversonoticias.com.br/dicas-de-bem-estar-para-cada-signo/" target="_blank">Saúde e o Zodiaco</a></td>
                 </tr>
                 <tr>
                     <td>JOSÉ</td>
