--- a/python.html
+++ b/python.html
@@ -94,7 +94,7 @@
                 <tr>
                     <td>LEILA</td>
                     <td>9ºB</td>
-                    <td><a href="">QUIZ da Leila</a></td>   
+                    <td><a href="https://www.youtube.com/watch?v=gDTsaTr4nI4">Música"Desconstruindo Amélia"</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
@@ -139,13 +139,13 @@
      <tr>
                     <td>WILLIAN</td>
                     <td>9ºB</td>
-                    <td><a href="">QUIZ do Willian</a></td>   
+                    <td><a href="https://trinket.io/python3/3b82cb7001">Letra da música"Desigualdade de gênero"</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> VICTÓRIA</td>
+                    <td>YSLLEN</td>
                     <td>9ºC</td>
-                    <td><a href="">QUIZ da Victória </a></td>
+                    <td><a href="https://youtu.be/GoFtn-JDd2I ">Entendendo a ODS3</a></td>
                 </tr>
      <tr>
                     <td>ROBERTO</td>
