--- a/python.html
+++ b/python.html
@@ -123,7 +123,7 @@
                     <th></th>                 
                     <td>ENZO</td>
                     <td>9ºA</td>
-                    <td><a href="">QUIZ do Enzo </a></td>
+                    <td><a href="https://trinket.io/python3/198c5d3f97">QUIZ do Enzo</a></td>
                 </tr>
                 <tr>
                     <td>HADASSA</td>
