--- a/python.html
+++ b/python.html
@@ -156,7 +156,7 @@
                     <th></th>                 
                     <td> VITÓRIA</td>
                     <td>8ºA</td>
-                    <td><a href="https://youtu.be/GoFtn-JDd2I" target="_blank">Entendendo a ODS3 </a></td>
+                    <td><a href="" target="_blank"></a></td>
                 </tr>
                 <tr>
                  <td>LUIZ AUGUSTO</td>
