--- a/scracth.html
+++ b/scracth.html
@@ -103,85 +103,85 @@
                 <tr>
                     <td>ENZO</td>
                     <td>7ºB</td>
-                    <td><a href="">HISTÓRIA do Enzo</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA do Enzo</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>JOSÉ </td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA do José </a></td>
+                    <td><a href="" target="_blank">HISTÓRIA do José </a></td>
             
                 </tr>
                 <tr>
                     <td>ADRIANO</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA do Adriano</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA do Adriano</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>JOSIANE </td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA da Josiane </a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Josiane </a></td>
                 </tr>
                 <tr>
                     <td>JULIA GARCIA</td>
                     <td>7ºA</td>
-                    <td><a href="">HISTÓRIA da Julia</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA da Julia</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>HELOISA</td>
                     <td>7ºB</td>
-                    <td><a href="">HISTÓRIA da Heloisa </a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Heloisa </a></td>
                 </tr>
                 <tr>
                     <td>PEDRO</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA do Pedro</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA do Pedro</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>JULIA LOURDES</td>
                     <td>9ºC</td>
-                    <td><a href="">HISTÓRIA da Júlia </a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Júlia </a></td>
                 </tr>
      <tr>
                     <td>LARA</td>
                     <td>9ºB</td>
-                    <td><a href="">HISTÓRIA da Lara</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA da Lara</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td> IZABELLA</td>
                     <td>9ºC</td>
-                    <td><a href="">HISTÓRIA da Izabella </a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Izabella </a></td>
                 </tr>
      <tr>
                     <td>ROGERIO RICHARD</td>
                     <td>7ºB</td>
-                    <td><a href="">HISTÓRIA do Richard</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA do Richard</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td> ROGERIO </td>
                     <td>7ºA</td>
-                    <td><a href="">HISTÓRIA do Rogério </a></td>
+                    <td><a href="" target="_blank">HISTÓRIA do Rogério </a></td>
                 </tr>
                 <tr>
                  <td>VICTOR</td>
                     <td>7ºA</td>
-                    <td><a href="">QUIZ do Luiz Augusto</a></td>   
+                    <td><a href="" target="_blank">QUIZ do Luiz Augusto</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td> LARA DANTAS</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA da Lara Dantas </a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Lara Dantas </a></td>
              </tr>
              <tr>
                  <td>GIOVANNA </td>
                     <td>7ºB</td>
-                    <td><a href="">HISTÓRIA da Giovanna</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA da Giovanna</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
@@ -198,40 +198,40 @@
                     <th></th>                 
                     <td>LUIZ VINICIUS</td>
                     <td>6ºA</td>
-                    <td><a href="">O amor</a></td>
+                    <td><a href="" target="_blank">O amor</a></td>
              </tr>
              <tr>
                  <td>MANUELA</td>
                     <td>6ºA</td>
-                    <td><a href="">HISTÓRIA da Manuela</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA da Manuela</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>RHYANNA</td>
                     <td>6ºA</td>
-                    <td><a href="">HISTÓRIA da Rhyanna</a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Rhyanna</a></td>
              </tr>
              <tr>
                     <td>INGRID</td>
                     <td>6ºB</td>
-                    <td><a href="">O filho que ajuda a mãe</a></td>   
+                    <td><a href="" target="_blank">O filho que ajuda a mãe</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>LAURA BIANCA</td>
                     <td>6ºB</td>
-                    <td><a href="">Fala de mãe</a></td>
+                    <td><a href="" target="_blank">Fala de mãe</a></td>
             </tr>
             <tr>
                     <td>KAMILLY</td>
                     <td>6ºB</td>
-                    <td><a href="">HISTÓRIA da Kamilly</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA da Kamilly</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>KAUAN </td>
                     <td>6ºA</td>
-                    <td><a href="">HISTÓRIA do Kauan</a></td>
+                    <td><a href="https://scratch.mit.edu/projects/861689262/fullscreen/"target="_blank">Fubola</a></td>
           </tr>
                 <tr>
                     <td>LUIS GUSTAVO</td>
@@ -242,18 +242,18 @@
                     <th></th>                 
                     <td>ANA VITORIA</td>
                     <td>6ºA</td>
-                    <td><a href="">HISTÓRIA da Ana</a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Ana</a></td>
           </tr>
               <tr>
                     <td>ENDRIL</td>
                     <td>6ºA</td>
-                    <td><a href="">HISTÓRIA do Endril</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA do Endril</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>MURILO</td>
                     <td>6ºC</td>
-                    <td><a href="">Emocionante história</a></td>
+                    <td><a href="" target="_blank">Emocionante história</a></td>
              </tr>
                  <tr>
                     <td>RAFAELA</td>
@@ -269,40 +269,40 @@
               <tr>
                     <td>KEVEN</td>
                     <td>7ºA</td>
-                    <td><a href="">HISTÓRIA do Keven</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA do Keven</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>ANDRÉ</td>
                     <td>7ºA</td>
-                    <td><a href="">HISTÓRIA do André</a></td>
+                    <td><a href="" target="_blank">HISTÓRIA do André</a></td>
           </tr>
                   <tr>
                     <td>JOÃO</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA do João</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA do João</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>STHEFANY</td>
                     <td>7ºB</td>
-                    <td><a href="">HISTÓRIA da Sthefany</a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Sthefany</a></td>
           </tr>
                  <tr>
                     <td>IZABELY</td>
                     <td>7ºB</td>
-                    <td><a href="">HISTÓRIA da Izabely</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA da Izabely</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>PAULO</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA do Paulo</a></td>
+                    <td><a href="" target="_blank">HISTÓRIA do Paulo</a></td>
           </tr>
                  <tr>
                     <td>ANA PAULA </td>
                     <td>7ºA</td>
-                    <td><a href="">HISTÓRIA da Ana</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA da Ana</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
@@ -313,7 +313,7 @@
                  <tr>
                     <td>MARIA </td>
                     <td>7ºB</td>
-                    <td><a href="">HISTÓRIA da Maria</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA da Maria</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
@@ -324,13 +324,13 @@
                   <tr>
                     <td>MURILLO</td>
                     <td>6ºB</td>
-                    <td><a href=""></a></td>   
+                    <td><a href="" target="_blank"></a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>MIGUEL</td>
                     <td>7ºB</td>
-                    <td><a href="">HISTÓRIA do Miguel</a></td>
+                    <td><a href="" target="_blank">HISTÓRIA do Miguel</a></td>
           </tr>
                   <tr>
                     <td>Cecília</td>
@@ -341,7 +341,7 @@
                     <th></th>                 
                     <td>RAISSA</td>
                     <td>7ºC</td>
-                    <td><a href="">HISTÓRIA da Raissa</a></td>
+                    <td><a href="" target="_blank">HISTÓRIA da Raissa</a></td>
           </tr>
                     <tr>
                     <td>LUCCA</td>
@@ -429,13 +429,13 @@
                    <tr>
                     <td>KEVEN</td>
                     <td>6º</td>
-                    <td><a href="">HISTÓRIA do Keven</a></td>   
+                    <td><a href="" target="_blank">HISTÓRIA do Keven</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
                     <td>THOMAS</td>
                     <td>6º</td>
-                    <td><a href="">HISTÓRIA do </a></td>
+                    <td><a href="" target="_blank">HISTÓRIA do </a></td>
           </tr>
             </thead>
  
