--- a/scracth.html
+++ b/scracth.html
@@ -417,7 +417,7 @@
                     <tr>
                     <td>ANA JULIA</td>
                     <td>6ºB</td>
-                    <td><a href="" target="_blank"></a></td>   
+                    <td><a href="https://brasilescola.uol.com.br/sociologia/desigualdade-de-genero.htm" target="_blank"></a>Um pouco de informação</td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
