--- a/scracth.html
+++ b/scracth.html
@@ -346,7 +346,7 @@
                     <tr>
                     <td>LUCCA</td>
                     <td>6ºA</td>
-                    <td><a href="" target="_blank"></a></td>   
+                    <td><a href="https://scratch.mit.edu/projects/863539127/fullscreen/" target="_blank">Antimachismo</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
@@ -423,7 +423,7 @@
                     <th></th>                 
                     <td>KESIA</td>
                     <td>6ºC</td>
-                    <td><a href="" target="_blank"></a></td>
+                    <td><a href="https://scratch.mit.edu/projects/863539127/fullscreen/" target="_blank"></a>Mundo machista</td>
                     
           </tr>
                    <tr>
