--- a/scracth.html
+++ b/scracth.html
@@ -333,7 +333,7 @@
                     <td><a href="" target="_blank">HISTÓRIA do Miguel</a></td>
           </tr>
                   <tr>
-                    <td>Cecília</td>
+                    <td>CECÍLIA</td>
                     <td>7ºA</td>
                     <td><a href="https://scratch.mit.edu/projects/860535230/fullscreen/" target="_blank">Batendo papo com Luccas</a></td>   
                     <th></th> 
@@ -411,7 +411,7 @@
                     <th></th>                 
                     <td>VICTOR</td>
                     <td>6ºC</td>
-                    <td><a href="" target="_blank"></a></td>
+                    <td><a href="https://scratch.mit.edu/projects/863539127/fullscreen/" target="_blank"></a>Dveria ser assim</td>
                     
           </tr>
                     <tr>
